Report viewer / exporter, slighty more accurate simulation.
Added the ability to load saved simulation data and view it as a report. Also added the ability to export that report as a pdf document. In preparation for better simulations, work began on several c++ classes for rotations and transformations.

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -13,6 +13,15 @@
     100% { transform: rotate(360deg); }
 }
 
+.sidebar {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 25%;
+    min-width: 120px;
+}
+
 .max-height {
     height: 100%;
 }
@@ -34,20 +43,19 @@
 .borderLayout .left {
     display: table-cell;
     vertical-align: top;
-    width: 10%;
-    min-width: 240px;
+    max-width: 20%;
 }
 
 .borderLayout .center {
     display: table-cell;
     vertical-align: top;
+    height: 100%;
 }
   
 .borderLayout .right {
     display: table-cell;
     vertical-align: top;
-    width: 10%;
-    min-width: 240px;
+    max-width: 20%;
 }
   
 .borderLayout .bottom {
